--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "sass": "^1.89.2",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
