--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "sass": "^1.89.2",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
