--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,27 @@
 version: '3.8'
+
 services:
-  frontend:
-    build: .
+  # Production build
+  app:
+    build:
+      context: .
+      target: production
     ports:
-      - "3000:5000"
-    container_name: frontend-app
+      - "8080:80"
+    container_name: property-app
+    restart: unless-stopped
+
+  # Development build (with hot reload)
+  app-dev:
+    build:
+      context: .
+      target: development
+    ports:
+      - "3001:3001"
+    container_name: property-app-dev
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    volumes:
+      - .:/app
+      - /app/node_modules
     restart: unless-stopped 
- 
